--- a/compose/configs/grafana/provisioning/dashboards/dashboards.yaml
+++ b/compose/configs/grafana/provisioning/dashboards/dashboards.yaml
@@ -1,11 +1,11 @@
 apiVersion: 1
 
 providers:
-  - name: 'Provisioned Dashboards'
+  - name: 'Default'
     orgId: 1
-    folder: 'Default'
+    folder: ''
     type: file
     disableDeletion: false
-    editable: true
+    updateIntervalSeconds: 10
     options:
       path: /var/lib/grafana/dashboards
